Commando: Add "Go To Anything" toolbar (replacing openfile toolbar)
This commit looks big but most of it is command/observer boilerplate and
removal of the openfile toolbar. The actual changes to code are minimal,
Commando searches itself have not changed aside from a small bug fix.

(integrated from master branch change 32f05b6 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/partials/scheme-skinning.less
+++ b/src/chrome/komodo/skin/partials/scheme-skinning.less
@@ -301,3 +301,14 @@ statusbarpanel > toolbarbutton[type="menu"] > dropmarker
 {
     background-image: @icon-hud-crumb-arrow !important;
 }
+
+#commando-search-quick[open]
+{
+    background: @background-primary !important;
+    color: @foreground !important;
+    
+    &[placeholder="true"]
+    {
+        color: fade(@foreground, 50%) !important;
+    }
+}
