fix: Commando: quickCommando styling issues on OSX
(integrated from master branch change f698742 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/modules/commando/skin/commando.less
+++ b/src/modules/commando/skin/commando.less
@@ -245,6 +245,12 @@
     }
 }
 
+#quickCommando /* toolbar */
+{
+    -moz-appearance: none;
+    border: 0 !important;
+}
+
 #commando-search-quick
 {
     -moz-appearance: none;
@@ -268,7 +274,6 @@
     {
         transition: all 0.1s;
         border-radius: 0;
-        border: 1px solid rgba(255,255,255,0.0);
         
         width: 495px;
         background-color: @hud-selection-background;
