fix: Skin: Some dialogs had transparent backgrounds
(integrated from master branch change 4c477c4 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/plat/shared/window.less
+++ b/src/chrome/komodo/skin/plat/shared/window.less
@@ -531,7 +531,7 @@ richlistbox { .list-styling.richlistbox(listbox); }
 
 /* Pref Window */
 
-.pref-window:not(#prefWindow):not(#prefProjectsWindow)
+.pref-window:not(dialog):not(#prefWindow):not(#prefProjectsWindow)
 {
     background: transparent;
     -moz-appearance: none;
