--- a/src/chrome/komodo/skin/plat/win/_config/tabs.less
+++ b/src/chrome/komodo/skin/plat/win/_config/tabs.less
@@ -19,8 +19,8 @@
 @tab-moz-appearance-icons:              none;
 
 @tab-box-shadow:                        none;
-@tab-border:                            0;
-@tab-border-top:                        0;
+@tab-border:                            1px solid transparent;
+@tab-border-top:                        1px solid transparent;
 @tab-transition:                        disabled;
 @tab-background:                        #F5F6F7;
 @tab-background-vertical:               @tab-background;
