--- a/src/chrome/komodo/skin/plat/win/_config/toolbars.less
+++ b/src/chrome/komodo/skin/plat/win/_config/toolbars.less
@@ -16,7 +16,7 @@
 @main-toolbox-button-border-width:           1px !important;
 @main-toolbox-button-border-style:           solid;
 @main-toolbox-button-border-color:           transparent;
-@main-toolbox-button-border-radius:          4px;
+@main-toolbox-button-border-radius:          2px;
 
 @main-toolbox-button-background-color:       inherit;
 @main-toolbox-button-background-image:       none;
@@ -32,14 +32,14 @@
 @main-toolbox-button-shadow-hover:           inherit;
 @main-toolbox-button-border-width-hover:     1px;
 @main-toolbox-button-border-style-hover:     solid;
-@main-toolbox-button-border-color-hover:     rgba(0,0,0, 0.4);
+@main-toolbox-button-border-color-hover:     rgba(0,0,0, 0.25);
 
-@main-toolbox-button-background-color-active:transparent !important;
+@main-toolbox-button-background-color-active:rgb(255, 255, 255) !important;
 @main-toolbox-button-background-image-active:none;
-@main-toolbox-button-shadow-active:          inset 0px 1px 5px rgba(0,0,0,0.15);
+@main-toolbox-button-shadow-active:          disabled;
 @main-toolbox-button-border-width-active:    1px;
 @main-toolbox-button-border-style-active:    solid;
-@main-toolbox-button-border-color-active:    rgba(0,0,0, 0.4);
+@main-toolbox-button-border-color-active:    rgba(0,0,0,0.25) !important;
 
 @main-toolbox-findtoolbar-color:             -moz-FieldText;/*#303030;*/
 @main-toolbox-findtoolbar-background:        -moz-Field;
