Move workspace file menu entries to more appropriate locations to match rest of UI.
(integrated from master branch change fcf2c85 by cgchoffman <cgchoffman@gmail.com>)

--- a/src/chrome/komodo/skin/plat/shared/_config/icons.less
+++ b/src/chrome/komodo/skin/plat/shared/_config/icons.less
@@ -452,3 +452,6 @@
 @icon-hud-statusbar-syntax-inprogress:url("@{icon-hud-url-prefix}busy4.svg@{icon-hud-url-suffix}");
 @icon-hud-statusbar-syntax-warning: url("@{icon-hud-url-prefix}warning2.svg@{icon-hud-url-suffix}");
 @icon-hud-statusbar-syntax-error:   url("@{icon-hud-url-prefix}cancel-circle2.svg@{icon-hud-url-suffix}");
+
+/* Workspace Icons */
+@icon-workspace-open:               url("@{icon-url-prefix}books.svg@{icon-url-suffix}");
