--- a/src/chrome/komodo/skin/plat/shared/icons_rules.less
+++ b/src/chrome/komodo/skin/plat/shared/icons_rules.less
@@ -1863,3 +1863,8 @@ window.hud-skinning statusbar
         list-style-image: @icon-hud-statusbar-syntax-error !important;
     }
 }
+
+.wordspace_open_icon
+{
+    list-style-image: @icon-workspace-open;
+}
