Workspace: Quick-launch additions.
(integrated from master branch change bf73d1d by cgchoffman <cgchoffman@gmail.com>)

--- a/src/chrome/komodo/skin/plat/shared/_config/icons.less
+++ b/src/chrome/komodo/skin/plat/shared/_config/icons.less
@@ -433,6 +433,7 @@
 @icon-hud-new-template:             url("@{icon-hud-url-prefix}file6.svg@{icon-hud-url-suffix}");
 @icon-hud-project:                  url("@{icon-hud-url-prefix}box.svg@{icon-hud-url-suffix}");
 @icon-hud-open-file:                url("@{icon-hud-url-prefix}folder-open.svg@{icon-hud-url-suffix}");
+@icon-hud-open-workspace:           url("@{icon-hud-url-prefix}books.svg@{icon-hud-url-suffix}");
 @icon-hud-gear:                     url("@{icon-hud-url-prefix}ko_cog_small.svg@{icon-hud-url-suffix}");
 @icon-hud-customize-panes:          url("@{icon-hud-url-prefix}grid3.svg@{icon-hud-url-suffix}");
 @icon-hud-case-sensitive:           url("@{icon-hud-url-prefix}type.svg@{icon-hud-url-suffix}");
