--- a/src/chrome/komodo/skin/plat/shared/icons_rules.less
+++ b/src/chrome/komodo/skin/plat/shared/icons_rules.less
@@ -1758,6 +1758,11 @@ window.hud-skinning statusbar
         list-style-image: @icon-hud-open-file !important;
     }
     
+    .open-workspace-icon
+    {
+        list-style-image: @icon-hud-open-workspace !important;
+    }
+    
     .preferences-icon,
     .cog-icon
     {
