Skin: Use native scrollbars for non-editor elements on OSX when using overlay scrollbars (OS setting)
(integrated from master branch change 0667cd0 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/partials/scheme-skinning.less
+++ b/src/chrome/komodo/skin/partials/scheme-skinning.less
@@ -138,8 +138,8 @@
     }
 }
 
-.hud scrollbar,
-scintilla scrollbar
+scintilla[virtualScrollbars="true"] row > scrollbar,
+.skinnedScrollbars
 {
     border: 0;
     background: transparent;
@@ -197,6 +197,15 @@ scintilla scrollbar
     &[orient="horizontal"]
     {
         height: 15px;
+    }
+}
+
+/* Do not skin non-editor scrollbars on OSX when overlay scrollbars are enabled */
+@media all and not (-moz-overlay-scrollbars)
+{
+    .hud scrollbar
+    {
+        .skinnedScrollbars();
     }
 }
 
