--- a/src/chrome/komodo/skin/plat/mac/scrollbars.less
+++ b/src/chrome/komodo/skin/plat/mac/scrollbars.less
@@ -18,17 +18,17 @@
             margin-bottom: 16px;
         }
         
-        /* Force visibility (override OS level setting, though only partly (see above) */
-        scrollbar:not([active="true"]),
-        scrollbar[disabled="true"]
-        {
-            visibility: visible !important;
-        }
-        
         /* Hide bottom scrollbar when wrapping is turned on */
-        &[wrapped="true"] scrollbar[orient="horizontal"]
+        &[wrapped="true"] row > scrollbar[orient="horizontal"]
         {
             visibility: collapse !important;
         }
+    }
+    
+    /* Force visibility (override OS level setting - mozilla doesnt unhide the scrollbars) */
+    scrollbar:not([active="true"]),
+    scrollbar[disabled="true"]
+    {
+        visibility: visible !important;
     }
 }
