--- a/src/chrome/komodo/skin/plat/shared/editor.less
+++ b/src/chrome/komodo/skin/plat/shared/editor.less
@@ -23,41 +23,6 @@
         background: @hud-special-color;
     }
 
-    scrollbar
-    {
-        border: 0;
-        background: transparent;
-
-        slider
-        {
-            -moz-appearance: none;
-            border: 0;
-            background: fade(@hud-background, 100%);
-        }
-
-        thumb
-        {
-            -moz-appearance: none;
-            background: darken(@hud-background, 5%);
-            border: 0;
-        }
-
-        thumb:hover
-        {
-            -moz-appearance: none;
-            background: darken(@hud-background, 10%);
-        }
-
-        &:hover
-        {
-            slider
-            {
-                -moz-appearance: none;
-                background: darken(fade(@hud-background, 100%), 2%);
-            }
-        }
-    }
-
     richlistbox,
     listbox
     {
@@ -148,6 +113,44 @@
         -moz-appearance: none !important;
     }
 
+}
+
+@media all and not (-moz-overlay-scrollbars)
+{
+    .hud scrollbar
+    {
+        border: 0;
+        background: transparent;
+
+        slider
+        {
+            -moz-appearance: none;
+            border: 0;
+            background: fade(@hud-background, 100%);
+        }
+
+        thumb
+        {
+            -moz-appearance: none;
+            background: darken(@hud-background, 5%);
+            border: 0;
+        }
+
+        thumb:hover
+        {
+            -moz-appearance: none;
+            background: darken(@hud-background, 10%);
+        }
+
+        &:hover
+        {
+            slider
+            {
+                -moz-appearance: none;
+                background: darken(fade(@hud-background, 100%), 2%);
+            }
+        }
+    }
 }
 
 /* Findbar */
