fix: Skin: Dont skin HUD scrollbars on Mac - fixed implementation to not use media queries
https://bugs.activestate.com/show_bug.cgi?id=106261

(integrated from master branch change b1a47de by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/partials/scheme-skinning.p.less
+++ b/src/chrome/komodo/skin/partials/scheme-skinning.p.less
@@ -200,14 +200,13 @@ scintilla[virtualScrollbars="true"] row > scrollbar,
     }
 }
 
-/* Do not skin non-editor scrollbars on OSX when overlay scrollbars are enabled */
-@media all and not (-moz-overlay-scrollbars)
+/* Do not skin non-editor scrollbars on OSX */
+/* #if PLATFORM != "darwin" */
+.hud scrollbar
 {
-    .hud scrollbar
-    {
-        .skinnedScrollbars();
-    }
+    .skinnedScrollbars();
 }
+/* #endif */
 
 /* Statusbar */
 
