--- a/src/chrome/komodo/skin/plat/gnome/platform.less
+++ b/src/chrome/komodo/skin/plat/gnome/platform.less
@@ -4,6 +4,7 @@
 @import url("chrome://komodo/skin/plat/shared/scrolltabs.less");
 @import url("chrome://komodo/skin/plat/shared/icons.less");
 @import url("chrome://komodo/skin/plat/shared/editor.less");
+@import url("chrome://komodo/skin/plat/shared/editor-scrollbars.less");
 
 /* Larger Style Groups */
 @import url("chrome://komodo/skin/window.less");
