--- a/src/chrome/komodo/skin/plat/mac/panes.less
+++ b/src/chrome/komodo/skin/plat/mac/panes.less
@@ -10,7 +10,7 @@
     }
 }
 
-#workspace_left_area, #workspace_right_area
+page[containerOrient="vertical"]
 {
     -moz-appearance: -moz-mac-vibrancy-light !important;
 }
