icons: Use icomoon for the new folder icon (places context)
(integrated from master branch change cdd7b1b by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/plat/shared/_config/icons.less
+++ b/src/chrome/komodo/skin/plat/shared/_config/icons.less
@@ -54,7 +54,7 @@
 
 /* File/Folder actions */
 @icon-folder-up:                url("chrome://komodo/skin/global/images/upLevel.png");
-@icon-newfolder:                url("chrome://komodo/skin/global/images/newDirectory.png");
+@icon-newfolder:                url("@{icon-url-prefix}folder-plus3.svg@{icon-url-suffix}");
 @icon-refreshFile:              url("chrome://komodo/skin/global/images/refreshFile.png");
 @icon-new-project:              url("@{icon-url-prefix}box.svg@{icon-url-suffix}");
 @icon-new-file:                 url("@{icon-url-prefix}file-plus.svg@{icon-url-suffix}");
