fix: Icons: Small icons should actually be small
(integrated from master branch change 032873f by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/plat/shared/_config/icons.less
+++ b/src/chrome/komodo/skin/plat/shared/_config/icons.less
@@ -118,7 +118,7 @@
 @icon-scroll-arrow-left:        url("chrome://komodo/skin/images/scrollArrowLeft.png");
 @icon-scroll-arrow-left-hover:  url("chrome://komodo/skin/images/scrollArrowLeft_hover.png");
 @icon-scroll-arrow-left-disabled: url("chrome://komodo/skin/images/scrollArrowLeft_disable.png");
-@icon-gear:                     url("@{icon-url-prefix}ko_cog_small.svg@{icon-url-suffix}");
+@icon-gear:                     url("@{icon-url-prefix}ko_cog_small.svg@{icon-url-suffix}&size=14");
 @icon-list-item-down:           url("@{icon-url-prefix}arrow-down4.svg@{icon-url-suffix}");
 @icon-list-item-up:             url("@{icon-url-prefix}arrow-up4.svg@{icon-url-suffix}");
 @icon-list-item-add:            url("@{icon-url-prefix}plus.svg@{icon-url-suffix}");
@@ -350,18 +350,18 @@
 @icon-filter-progress:          url("@{icon-url-prefix}history.svg@{icon-url-suffix}");
 
 /* Code Browser Widget */
-@icon-codebrowser-locate:       url("@{icon-url-prefix}ko_locate_small.svg@{icon-url-suffix}");
+@icon-codebrowser-locate:       url("@{icon-url-prefix}ko_locate_small.svg@{icon-url-suffix}&size=14");
 
 /* DOM Browser Widget */
-@icon-dombrowser-show-attributes: url("@{icon-url-prefix}ko_dom_small.svg@{icon-url-suffix}");
-@icon-dombrowser-locate:        url("@{icon-url-prefix}ko_locate_small.svg@{icon-url-suffix}");
+@icon-dombrowser-show-attributes: url("@{icon-url-prefix}ko_dom_small.svg@{icon-url-suffix}&size=14");
+@icon-dombrowser-locate:        url("@{icon-url-prefix}ko_locate_small.svg@{icon-url-suffix}&size=14");
 
 /* Database Widget */
-@icon-database-add:             url("@{icon-url-prefix}ko_plus_small.svg@{icon-url-suffix}");
+@icon-database-add:             url("@{icon-url-prefix}ko_plus_small.svg@{icon-url-suffix}&size=14");
 
 /* Collaboration Widget */
-@icon-collab-add:               url("@{icon-url-prefix}ko_plus_small.svg@{icon-url-suffix}");
-@icon-collab-refresh:           url("@{icon-url-prefix}ko_refresh_small.svg@{icon-url-suffix}");
+@icon-collab-add:               url("@{icon-url-prefix}ko_plus_small.svg@{icon-url-suffix}&size=14");
+@icon-collab-refresh:           url("@{icon-url-prefix}ko_refresh_small.svg@{icon-url-suffix}&size=14");
 
 /* Collaboration Widget */
 @icon-places-panel-toggle:      url("@{icon-url-prefix}arrow-down2.svg@{icon-url-suffix}");
@@ -434,7 +434,7 @@
 @icon-hud-project:                  url("@{icon-hud-url-prefix}box.svg@{icon-hud-url-suffix}");
 @icon-hud-open-file:                url("@{icon-hud-url-prefix}folder-open.svg@{icon-hud-url-suffix}");
 @icon-hud-open-workspace:           url("@{icon-hud-url-prefix}books.svg@{icon-hud-url-suffix}");
-@icon-hud-gear:                     url("@{icon-hud-url-prefix}ko_cog_small.svg@{icon-hud-url-suffix}");
+@icon-hud-gear:                     url("@{icon-hud-url-prefix}ko_cog_small.svg@{icon-hud-url-suffix}&size=14");
 @icon-hud-customize-panes:          url("@{icon-hud-url-prefix}grid3.svg@{icon-hud-url-suffix}");
 @icon-hud-case-sensitive:           url("@{icon-hud-url-prefix}type.svg@{icon-hud-url-suffix}");
 @icon-hud-case-insensitive:         url("@{icon-hud-url-prefix}font-size.svg@{icon-hud-url-suffix}");
