fix: Skin: Commando tip padding on OSX
(integrated from master branch change 7ad3ce8 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/plat/mac/window.less
+++ b/src/chrome/komodo/skin/plat/mac/window.less
@@ -33,3 +33,9 @@ statusbar#statusbarviewbox
 treechildren::-moz-tree-twisty {
     margin-right: -7px;
 }
+
+
+#commando-tip description
+{
+    padding: 4px 0 0 4px;
+}
