skin: Reduce scrollbar size and make pane scrollbars similar to editor scrollbars
https://bugs.activestate.com/show_bug.cgi?id=106309

(integrated from master branch change 321d5ce by Nathan Rijksen <nathanr@activestate.com>)

--- a/src/chrome/komodo/skin/plat/shared/_config/scrollbars.less
+++ b/src/chrome/komodo/skin/plat/shared/_config/scrollbars.less
@@ -105,11 +105,11 @@
 @scrollbar-pane-wrapper-border-radius:      disabled;
 @scrollbar-pane-wrapper-border:             disabled;
 @scrollbar-pane-x-wrapper-margin:           0 0 2px;
-@scrollbar-pane-x-wrapper-height:           14px;
+@scrollbar-pane-x-wrapper-height:           10px;
 @scrollbar-pane-x-wrapper-width:            auto;
 @scrollbar-pane-y-wrapper-margin:           0 2px 0 0;
 @scrollbar-pane-y-wrapper-height:           auto;
-@scrollbar-pane-y-wrapper-width:            14px;
+@scrollbar-pane-y-wrapper-width:            10px;
 
 /* Wrapper - Hover */
 @scrollbar-pane-wrapper-background-hover:   transparent;
@@ -127,18 +127,18 @@
 @scrollbar-pane-slider-background:         transparent;
 @scrollbar-pane-slider-transition:         all 0.2s ease-in-out;
 @scrollbar-pane-slider-visibility:         disabled;
-@scrollbar-pane-slider-border-radius:      4px;
+@scrollbar-pane-slider-border-radius:      0;
 @scrollbar-pane-slider-border:             disabled;
-@scrollbar-pane-x-slider-margin:           6px 0 0;
-@scrollbar-pane-x-slider-height:           8px;
+@scrollbar-pane-x-slider-margin:           0;
+@scrollbar-pane-x-slider-height:           10px;
 @scrollbar-pane-x-slider-width:            auto;
-@scrollbar-pane-y-slider-margin:           0 0 0 6px;
+@scrollbar-pane-y-slider-margin:           0;
 @scrollbar-pane-y-slider-height:           auto;
-@scrollbar-pane-y-slider-width:            8px;
+@scrollbar-pane-y-slider-width:            10px;
 
 /* Slider - Hover */
 @scrollbar-pane-slider-background-hover:   ThreeDHighlight;
-@scrollbar-pane-slider-border-radius-hover:8px;
+@scrollbar-pane-slider-border-radius-hover:0;
 @scrollbar-pane-slider-border-hover:       disabled;
 @scrollbar-pane-x-slider-margin-hover:     0;
 @scrollbar-pane-x-slider-height-hover:     @scrollbar-pane-x-wrapper-height;
@@ -152,7 +152,7 @@
 @scrollbar-pane-thumb-background:         rgba(150,150,150,0.8);
 @scrollbar-pane-thumb-transition:         disabled;
 @scrollbar-pane-thumb-visibility:         disabled;
-@scrollbar-pane-thumb-border-radius:      4px;
+@scrollbar-pane-thumb-border-radius:      0;
 @scrollbar-pane-thumb-border:             0;
 @scrollbar-pane-x-thumb-margin:           disabled;
 @scrollbar-pane-x-thumb-height:           disabled;
@@ -163,7 +163,7 @@
 
 /* Thumb - Hover */
 @scrollbar-pane-thumb-background-hover:   rgba(150,150,150,1.0);
-@scrollbar-pane-thumb-border-radius-hover:8px;
+@scrollbar-pane-thumb-border-radius-hover:0;
 @scrollbar-pane-thumb-border-hover:       disabled;
 @scrollbar-pane-x-thumb-margin-hover:     disabled;
 @scrollbar-pane-x-thumb-height-hover:     disabled;
