skin: Improve padding between toolbar and tab bar
(integrated from master branch change c6f7718 by Nathan Rijksen <nathanr@activestate.com>)

--- a/src/chrome/komodo/skin/plat/win/toolbars.less
+++ b/src/chrome/komodo/skin/plat/win/toolbars.less
@@ -33,9 +33,15 @@ toolbarbutton {
     -moz-appearance: none !important;
 }
 
+#komodo-box
+{
+  background: @main-toolbox-background;
+  padding-top: 2px;
+}
+
 #main-toolboxrow
 {
-  padding-bottom: 6px;
+  padding-bottom: 3px;
   padding-top: 3px;
 
   toolbaritem
