Fixing border at top and side of scintilla box. TODO: Remove rules from scheme-skinning.less that removes the borders from the statusbar.
(integrated from master branch change 310c887 by cgchoffman <cgchoffman@gmail.com>)

--- a/src/chrome/komodo/skin/plat/win/window.less
+++ b/src/chrome/komodo/skin/plat/win/window.less
@@ -1,10 +1,15 @@
 @import url("chrome://komodo/skin/plat/shared/window.less");
 
-view[type="editor"] tabbox > tabpanels,
+view tabbox:not(.tabs-bottom) > tabpanels,
 #workspace_bottom_area,
 #statusbarviewbox,
 #customizingPlaceHolder
 {
     border-left: @main-border;
     border-right: @main-border;
+}
+
+view tabbox:not(.tabs-bottom) > tabpanels
+{
+    border-top: @main-border;
 }
