--- a/src/chrome/komodo/skin/plat/shared/tabs.less
+++ b/src/chrome/komodo/skin/plat/shared/tabs.less
@@ -62,6 +62,11 @@ spacer.tabs-left, spacer.tabs-right
     border: @tab-spacer-border;
 }
 
+#editorvbox .tabstrip-box
+{
+    border-bottom: 0;
+}
+
 tabs:not(.tabs-bottom)
 {
     border: none;
