fix: UI: properly style notifications
https://bugs.activestate.com/show_bug.cgi?id=106313

(integrated from master branch change fcc81e9 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/plat/shared/window.less
+++ b/src/chrome/komodo/skin/plat/shared/window.less
@@ -1,6 +1,6 @@
 @import url("chrome://komodo/skin/_config/window.less");
 
-window, page, dialog, wizard, wizardpage, prefwindow, notification
+window, page, dialog, wizard, wizardpage, prefwindow
 {
     -moz-appearance: @window-appearance;
     background: @window-background;
