--- a/src/modules/abyss_skin/skin/window.less
+++ b/src/modules/abyss_skin/skin/window.less
@@ -58,3 +58,10 @@ window#komodo_main :not(toolbarbutton):not(toolbaritem)
         padding: 6px;
     }
 }
+
+notification
+{
+    -moz-appearance: @window-appearance;
+    background: @window-background;
+    color: @window-color;
+}
