--- a/src/chrome/komodo/skin/partials/scheme-skinning.p.less
+++ b/src/chrome/komodo/skin/partials/scheme-skinning.p.less
@@ -105,16 +105,6 @@
         background-image: linear-gradient(to right, rgba(0,0,0,0.0) 0, @special 200px, @special 300px, rgba(0,0,0,0.0) 500px) !important;
     }
 
-    textbox:not(.transparent)
-    {
-        background: @background-input !important;
-    }
-
-    textbox
-    {
-        color: @foreground !important;
-    }
-
     ::-moz-selection {
         color: @special-fore !important;
         background: @special;
@@ -133,6 +123,28 @@
     }
 
     button:not(.button-plain)
+    {
+        color: @foreground !important;
+    }
+}
+
+statusbar#statusbarviewbox,
+.hud
+{
+    textbox:not(.transparent)
+    {
+        -moz-appearance: none !important;
+        background: @background-input !important;
+        border: 0;
+
+        & > hbox
+        {
+            -moz-appearance: none !important;
+            background-color: transparent !important;
+        }
+    }
+
+    textbox
     {
         color: @foreground !important;
     }
