fix: Abyss: White backgrounds / borders
(integrated from master branch change 8155a66 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/plat/shared/icons_rules.less
+++ b/src/chrome/komodo/skin/plat/shared/icons_rules.less
@@ -99,6 +99,7 @@ menuitem[type="checkbox"]
         background-image: @icon-checkbox;
         background-repeat: no-repeat;
         background-position: center;
+        background-size: 16px;
         min-height: 16px;
     }
 
@@ -120,6 +121,7 @@ menuitem[type="radio"]
         background-image: @icon-radio;
         background-repeat: no-repeat;
         background-position: top left;
+        background-size: 16px;
         min-height: 16px;
     }
 
