--- a/src/modules/abyss_skin/skin/_config/tabs.less
+++ b/src/modules/abyss_skin/skin/_config/tabs.less
@@ -8,6 +8,8 @@
 @tab-box-background-image-vertical:     none;
 @tab-box-background-icons:              -moz-linear-gradient(-90deg , rgba(0,0,0,0.1) 0%, rgba(0,0,0,0.3) 100%);
 @tab-box-box-shadow-icons:              none;
+@tab-box-background-inactive:           @tab-box-background-color @tab-box-background-image;
+@tab-box-background-icons-inactive:     @tab-box-background-icons;
 @tab-box-content-background-color:      lighten(@window-background, 2%);
 @tab-box-content-color:                 darken(@window-color, 15%);
 
