UI: Updated Panel splitter to fit the new flat UI design
(integrated from master branch change a6c79b2 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/plat/shared/panes.less
+++ b/src/chrome/komodo/skin/plat/shared/panes.less
@@ -39,6 +39,7 @@ ko-pane tabpanels
             -moz-box-orient: horizontal;
             height: 1px;
             background: @widget-splitter-background;
+            margin: 0 10px;
         }
     }
 
