--- a/src/modules/abyss_skin/skin/_config/panes.less
+++ b/src/modules/abyss_skin/skin/_config/panes.less
@@ -9,7 +9,7 @@
 
 @panel-separator-shadow:                inherit;
 
-@widget-splitter-background:            -moz-linear-gradient(left, rgba(0,0,0,0.01) 0%, rgba(0,0,0,0.25) 10%, rgba(0,0,0,0.35) 50%, rgba(0,0,0,0.25) 90%, rgba(0,0,0,0.01) 100%);
+@widget-splitter-background:            rgba(0,0,0,0.35);
 
 @pane-splitter-appearance:              none;
 @pane-splitter-border-width:            0 1px 0 0;
