--- a/src/modules/places/skin/places.p.less
+++ b/src/modules/places/skin/places.p.less
@@ -151,6 +151,7 @@ undo-button {
   -moz-box-orient: horizontal;
   height: 1px;
   background: @widget-splitter-background;
+  margin: 0 10px;
 }
 #placesSubpanelSplitter > grippy {
   background-image: none !important;
