--- a/src/chrome/komodo/skin/plat/mac/window.less
+++ b/src/chrome/komodo/skin/plat/mac/window.less
@@ -39,3 +39,8 @@ treechildren::-moz-tree-twisty {
 {
     padding: 4px 0 0 4px;
 }
+
+#pin-btn[checked]
+{
+    list-style-image: @icon-pin-selected !important;
+}
