--- a/src/chrome/komodo/skin/plat/shared/_config/icons.less
+++ b/src/chrome/komodo/skin/plat/shared/_config/icons.less
@@ -166,6 +166,7 @@
 @icon-run-command:              url("@{icon-url-prefix}play4.svg@{icon-url-suffix}");
 @icon-print:                    url("@{icon-url-prefix}print.svg@{icon-url-suffix}");
 @icon-pin:                      url("@{icon-url-prefix}pushpin.svg@{icon-url-suffix}");
+@icon-pin-selected:             url("@{icon-selected-url-prefix}pushpin.svg@{icon-selected-url-suffix}"); /* OSX Only */
 @icon-community:                url("@{icon-url-prefix}users4.svg@{icon-url-suffix}");
 @icon-maillist:                 url("@{icon-url-prefix}envelop.svg@{icon-url-suffix}");
 @icon-bugs:                     url("@{icon-url-prefix}bug.svg@{icon-url-suffix}");
