skin: Color minimap border according to color scheme
(integrated from master branch change 711ef63 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/partials/scheme-skinning.p.less
+++ b/src/chrome/komodo/skin/partials/scheme-skinning.p.less
@@ -332,3 +332,8 @@ statusbarpanel > toolbarbutton[type="menu"] > dropmarker
         color: fade(@foreground, 50%) !important;
     }
 }
+
+minimap
+{
+    border-left: 1px solid @border !important;
+}
