Abyss: Remove gradients/opacity from trees
(integrated from master branch change dfde864 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/modules/abyss_skin/skin/_config/window.less
+++ b/src/modules/abyss_skin/skin/_config/window.less
@@ -128,9 +128,9 @@
 @list-tree-item-color-selected:              lighten(@list-tree-item-color, 10%);
 @list-tree-item-color-focus:                 lighten(@list-tree-item-color, 20%);
 @list-tree-row-background:                   transparent;
-@list-tree-row-background-odd:               rgba(0, 0, 0, 0.1);
-@list-tree-row-background-selected:          -moz-linear-gradient(top, rgba(80, 157, 212, 0.05) 15%, rgba(80, 157, 212, 0.1) 100%);
-@list-tree-row-background-focus:             -moz-linear-gradient(top, rgba(80, 157, 212, 0.1) 15%, rgba(80, 157, 212, 0.2) 100%);
+@list-tree-row-background-odd:               disabled;
+@list-tree-row-background-selected:          #293239;
+@list-tree-row-background-focus:             #30404B;
 
 @list-listbox-appearance:                    @list-tree-appearance;
 @list-listbox-background:                    @list-tree-background;
