fix: Abyss: Borders showing around tree elements on hover. Resolves #25
(integrated from master branch change 87ca86d by Nathan Rijksen <nathanr@activestate.com>)

--- a/src/modules/abyss_skin/skin/window.less
+++ b/src/modules/abyss_skin/skin/window.less
@@ -59,9 +59,19 @@ window#komodo_main :not(toolbarbutton):not(toolbaritem)
     }
 }
 
+
 notification
 {
     -moz-appearance: @window-appearance;
     background: @window-background;
     color: @window-color;
+}
+
+treechildren:not(.autocomplete-treebody)::-moz-tree-row
+{
+    -moz-border-top-colors: transparent;
+    -moz-border-right-colors: transparent;
+    -moz-border-left-colors: transparent;
+    -moz-border-bottom-colors: transparent;
+    outline: 0 !important;
 }
