skin: gtk_paper: constructive criticism accepted, Nathan ;)

--- a/src/modules/gtk_paper/skin/_config/tabs.less
+++ b/src/modules/gtk_paper/skin/_config/tabs.less
@@ -38,3 +38,13 @@
 @tab-active-color:                      @tab-selected-color;
 @tab-active-background-vertical:        @tab-active-background;
 @tab-active-box-shadow-vertical:        @tab-active-box-shadow;
+
+@tab-icons-hover-background:            #6E7A7F;
+@tab-icons-hover-border:                0;
+@tab-icons-hover-border-radius:         0px;
+@tab-icons-hover-box-shadow:            none;
+
+@tab-icons-selected-background:         none;
+@tab-icons-selected-border:             0;
+@tab-icons-selected-border-radius:      0px;
+@tab-icons-selected-box-shadow:         none;
