--- a/src/modules/gtk_paper/skin/_config/toolbars.less
+++ b/src/modules/gtk_paper/skin/_config/toolbars.less
@@ -20,7 +20,7 @@
 @main-toolbox-button-border-color:              #636E73;
 @main-toolbox-button-border-radius:             0;
 
-@main-toolbox-button-background-color:          #454D50;
+@main-toolbox-button-background-color:          none;
 @main-toolbox-button-background-image:          none;
 @main-toolbox-button-background-position:       left center;
 @main-toolbox-button-background-repeat:         no-repeat;
@@ -29,14 +29,14 @@
 @main-toolbox-group-border-color-inactive:      inherit;
 @main-toolbox-button-border-color-inactive:     #636E73;
 
-@main-toolbox-button-background-color-hover:    #636E73;
+@main-toolbox-button-background-color-hover:    #6E7A7F;
 @main-toolbox-button-background-image-hover:    @main-toolbox-button-background-image;
 @main-toolbox-button-shadow-hover:              @main-toolbox-button-shadow;
 @main-toolbox-button-border-width-hover:        @main-toolbox-button-border-width;
 @main-toolbox-button-border-style-hover:        @main-toolbox-button-border-style;
 @main-toolbox-button-border-color-hover:        @main-toolbox-button-border-color;
 
-@main-toolbox-button-background-color-active:   #6E7A7F;
+@main-toolbox-button-background-color-active:   #454D50;
 @main-toolbox-button-background-image-active:   none;
 @main-toolbox-button-shadow-active:             @main-toolbox-button-shadow;
 @main-toolbox-button-border-width-active:       @main-toolbox-button-border-width;
