--- a/src/modules/gtk_paper/skin/_config/window.less
+++ b/src/modules/gtk_paper/skin/_config/window.less
@@ -6,3 +6,8 @@
 //@sidebar-background:                    #636E73; // See /skin/window.less:43
 @sidebar-inactive-background:           @sidebar-background;
 //@sidebar-list-item-color:               #C1C1C1; // See /skin/window.less:43
+
+@goto-anything-background:          none;
+@goto-anything-background-hovered:  #6E7A7F;
+@goto-anything-border-color:        rgba(255, 255, 255, 0.1);
+@goto-anything-foreground:          #f7f7f7;
