--- a/src/modules/gtk_paper/skin/window.less
+++ b/src/modules/gtk_paper/skin/window.less
@@ -68,3 +68,17 @@ toolbox #main-toolboxrow toolbar > toolbaritem > toolbarbutton
     }
 }
 */
+
+#quickCommando label {
+    border: 1px solid;
+    border-color: @goto-anything-border-color !important;
+    border-radius: 0px !important;
+    background: @goto-anything-background;
+    color: @goto-anything-foreground;
+    
+    &:hover {
+        background: @goto-anything-background-hovered;
+    }
+    
+    
+}
