fix: Commando: Oversized menulist icon on HiDPI
rn=

(integrated from master branch change fcee041 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/modules/commando/skin/commando.less
+++ b/src/modules/commando/skin/commando.less
@@ -51,12 +51,16 @@
             background-repeat: no-repeat;
             width: 16px;
             height: 16px;
+            background-size: 16px;
             max-height: 16px;
             padding-top: 3px;
+            margin-right: 4px;
         }
 
         description
         {
+            margin: 0;
+            padding: 0;
             padding-top: 2px;
         }
     }
