fix: Icons: Debug tab icon was oversized on HiDPI/Retina - fixes #72
rn=

(integrated from master branch change b414f93 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/plat/shared/icons_rules.less
+++ b/src/chrome/komodo/skin/plat/shared/icons_rules.less
@@ -1,6 +1,6 @@
 /* Force icon size for HiDPI displays */
 
-button, toolbarbutton, menuitem
+button, toolbarbutton, menuitem, tab
 {
     &[class$='-icon'] image, [class$='-icon'] image,
     &[class$='_icon'] image, [class$='_icon'] image,
