fix: Notify: Oversized notification icons on HiDPI/Retina - fixes #43
(integrated from master branch change e0a5262 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/modules/notify/skin/notify.less
+++ b/src/modules/notify/skin/notify.less
@@ -54,6 +54,7 @@
         opacity: 0.7;
         cursor: pointer;
         transition: all 0.2s ease;
+        background-size: 16px !important;
 
         dropmarker
         {
