fix: UI: Places widget dropdown menu had uppercase text - fixes #46
rn=

(integrated from master branch change 6bfded8 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/plat/shared/modules.less
+++ b/src/chrome/komodo/skin/plat/shared/modules.less
@@ -240,6 +240,13 @@ wizard#accountSetup
     text-transform: @panel-label-transform;
     text-shadow: @panel-label-shadow;
     font-family: @panel-label-font;
+    
+    menupopup
+    {
+        text-transform: none;
+        text-shadow: none;
+        font-weight: normal;
+    }
 }
 
 #notificationWidget
