--- a/src/modules/notify/skin/notify.less
+++ b/src/modules/notify/skin/notify.less
@@ -1,6 +1,6 @@
 .notify-panel
 {
-    -moz-appearance: none;
+    -moz-appearance: none !important;
     padding: 6px;
     color: #EEE;
     text-shadow: 0 -1px rgba(0, 0, 0, 0.3);
@@ -8,6 +8,7 @@
     border-radius: 4px;
     background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.3));
     box-shadow: inset 0 0 0 1px rgba(255,255,255, 0.2), 0 0 6px rgba(0, 0, 0, 0.4);
+    border: 0 !important;
 
     &.p-notification
     {
