Commando: Added the "QuickScope" mechanic
Commando will now show you a quick list of available scopes that you can
search from, so you don't need to use the dropdown menu or special
keyboard shortcuts
rn=

(integrated from master branch change c73fbcf by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/modules/commando/skin/commando.less
+++ b/src/modules/commando/skin/commando.less
@@ -176,8 +176,7 @@
 
         richlistitem
         {
-            padding: 5px;
-            height: 35px;
+            padding: 3px 0 3px 6px;
             
             label, description
             {
@@ -224,7 +223,7 @@
                 .description
                 {
                     opacity: 0.7;
-                    margin: 0 0 0 4px;
+                    margin: 0 0 0 6px;
                 }
             }
         }
