--- a/src/chrome/komodo/skin/plat/shared/editor.less
+++ b/src/chrome/komodo/skin/plat/shared/editor.less
@@ -66,7 +66,8 @@
         }
     }
 
-    :not(button) > button:not(.button-plain)
+    :not(button) > button:not(.button-plain),
+    & > button:not(.button-plain)
     {
         -moz-appearance: none !important;
         background-color: @hud-dock-color;
@@ -196,5 +197,20 @@ scintilla[anonid="scintilla"] > panel[anonid="autocompletepopup"]
     textbox dropmarker
     {
         visibility: collapse;
+    }
+}
+
+.hud.shell-output
+{
+    label
+    {
+        opacity: 0.6;
+    }
+    
+    textbox
+    {
+        background: transparent !important;
+        font-family: monospace;
+        font-size: 0.9rem;
     }
 }
