Skin: remove border around quicklaunch page
(integrated from master branch change 29afe0a by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/plat/shared/modules.less
+++ b/src/chrome/komodo/skin/plat/shared/modules.less
@@ -331,6 +331,9 @@ toolbar#nav-bar
 
 #quicklaunch
 {
+    border: 0 !important;
+    border-radius: 0 !important;
+    
     :not(button) > button
     {
         width: 250px;
